Small bugs fixed on mobile

--- a/themes/vladgg/assets/scss/components/sections.scss
+++ b/themes/vladgg/assets/scss/components/sections.scss
@@ -91,6 +91,14 @@
             @include nav-color($neutral-dark);
         }
     }
+
+    @include mobile {
+        padding: 0;
+
+        nav > * {
+            width: 100%;
+        }
+    }
 }
 
 #content {
@@ -136,6 +144,7 @@ footer {
 
     #bwl-alt {
         opacity: 0;
+        display: none;
         transition: opacity .25s;
 
         img {
@@ -150,6 +159,10 @@ footer {
 
     @include mobile {
         text-align: center;
+
+        #bwl-alt {
+            justify-content: center;
+        }
         
         .flex-justify-end {
             justify-content: center;
